src/lexer/snapshots/nash__lexer__tests__should_parse_template_string_with_keyword_substring.snap
---
source: src/lexer/mod.rs
assertion_line: 193
expression: tokens
---
- value:
    DoubleQuote: []
  start: 0
  end: 1
- value:
    Dollar: []
  start: 1
  end: 2
- value:
    LeftCurly: []
  start: 2
  end: 3
- value:
    Identifier: index
  start: 3
  end: 8
- value:
    RightCurly: []
  start: 8
  end: 9
- value:
    DoubleQuote: []
  start: 9
  end: 10
